--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-footer.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-footer.scss
@@ -45,6 +45,10 @@ footer {
 			a {
 				font-size: 20px;
 				font-weight: 800;
+				text-decoration: none;
+				&:hover {
+					color: #ffffff;
+				}
 			}
 			.ptc {
 				font-weight: 500;
