--- a/www-root/includes/newsroomHomepageIncludes/newsroomFooter.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomFooter.html
@@ -5,18 +5,18 @@
 				<div class="col-md-4">
 					<h3 class="footer-header">News Resources</h3>
 					<ul>
-						<li><a href="">Media Contacts</a></li>
-						<li><a href="">Experts Guide</a></li>
-						<li><a href="">For Journalists</a></li>
+						<li><a href="" class="">Media Contacts</a></li>
+						<li><a href="" class="">Experts Guide</a></li>
+						<li><a href="" class="">For Journalists</a></li>
 						<li style="border-bottom: none;"><a href="">MSU Denver Media Library</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
 					<h3 class="footer-header">The Insider</h3>
 					<ul>
-						<li><a href="">Subscribe to the insider</a></li>
-						<li><a href="">Submit a story</a></li>
-						<li><a href="">Send us feedback</a></li>
+						<li><a href="" class="">Subscribe to the insider</a></li>
+						<li><a href="" class="">Submit a story</a></li>
+						<li><a href="" class="">Send us feedback</a></li>
 						<li style="border-bottom: none;"><a href="">Contact Us</a></li>
 					</ul>
 				</div>
@@ -50,13 +50,13 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-md-4 msu-links">
-					<a href="">MSUDenver.edu</a>
+					<a href="" class="underline-link">MSUDenver.edu</a>
 				</div>
 				<div class="col-md-4 msu-links">
-					<a href="">Give to MSU Denver</a>
+					<a href="" class="underline-link">Give to MSU Denver</a>
 				</div>
 				<div class="col-md-4 msu-links" style="border-right: none;">
-					<a href="">Apply to MSU Denver</a>
+					<a href="" class="underline-link">Apply to MSU Denver</a>
 				</div>
 			</div>
 			<div class="row ptc text-center">
