--- a/www-root/style-assets/css/newsroom-style.css
+++ b/www-root/style-assets/css/newsroom-style.css
@@ -7697,6 +7697,10 @@ footer .footer-bottom .container .msu-links {
 footer .footer-bottom .container a {
   font-size: 20px;
   font-weight: 800;
+  text-decoration: none;
+}
+footer .footer-bottom .container a:hover {
+  color: #ffffff;
 }
 footer .footer-bottom .container .ptc {
   font-weight: 500;
