adds updates to css for the mobile nav. updates newsroom.js logic. adds compiled files

--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -81,7 +81,7 @@
           <input type="text" class="form-control" placeholder="Search Insider News">
           <span class="input-group-btn">
             <div class="form-group">
-              <button class="btn btn-default" type="button"><span class="fa fa-search fa-2x"></span></button>
+              <button class="btn btn-default" type="button"><span class="fa fa-search"></span></button>
             </div>
           </span>
         </div><!-- /input-group -->
