migrates collapse span styles from responsive-overrides.scss to newsroom-nav.scss. adds some styles refinemnts to newsroom-mav.scss.adds compiled files

--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
@@ -11,9 +11,26 @@ nav {
 	}
 }
 
+/* mobile nav bar styling */ 
 .newsroom-mobile-container {
-	background: $msu-red;
+	background: $msu-blue;
 	.navbar-header {
+		.navbar-toggle {
+			border: none;
+			&:focus {
+				background-color: transparent;
+			}
+			span {
+				&.icon-bar {
+					width: 26px;
+					height: 3px;
+					background-color: #ffffff;
+					& + .icon-bar {
+						margin-top: 5px;
+					}
+				}
+			}
+		}
 		.navbar-brand {
 			padding: 11px 15px;
 		}
