--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
@@ -36,6 +36,16 @@ nav {
 		}
 	}
 	.navbar-collapse {
+		&.collapsing {
+			background-color: $msu-red;
+			margin-left: -24px;
+			margin-right: -24px;
+		}
+		&.in {
+			background-color: $msu-red;
+			margin-left: -24px;
+			margin-right: -24px;
+		}
 		.navbar-left {
 			li {
 				a {
