--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -12109,7 +12109,15 @@ nav.navbar {
   margin-bottom: 0px;
 }
 .newsroom-nav-container .navbar-form .form-control {
-  width: 20vw;
+  width: 13vw;
+  height: 50px;
+  border: none;
+  border-radius: 0px;
+}
+.newsroom-nav-container .navbar-form .form-control:focus {
+  border-color: inherit;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 .newsroom-nav-container .input-group {
   width: auto;
@@ -12120,26 +12128,16 @@ nav.navbar {
   left: 0px;
 }
 .newsroom-nav-container .input-group .input-group-btn button.btn.btn-default {
-  height: 67px;
+  height: 50px;
   border-radius: 0px;
   border: none;
 }
 .newsroom-nav-container .input-group .input-group-btn button.btn.btn-default span {
   color: #003a6e;
 }
-.newsroom-nav-container .form-control {
-  height: 67px;
-  border: none;
-  border-radius: 0px;
-}
-.newsroom-nav-container .form-control:focus {
-  border-color: inherit;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
 .newsroom-nav-container input.form-control[type="text"] {
   font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   text-transform: uppercase;
   letter-spacing: 0.075em;
 }
@@ -12617,9 +12615,9 @@ hr.pres-links {
 }
 
 .pres-button-interact {
-  display: ┬átable-cell;
-  vertical-align: ┬ámiddle;
-  text-align: ┬ácenter;
+  display:  table-cell;
+  vertical-align:  middle;
+  text-align:  center;
 }
 
 .president-page .form-group {
