adds scss refinements to hero tab information and homepage article font sizes

--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
@@ -13,7 +13,7 @@
 				    object-position: center center;
 				}
 				h4 {
-			    	font-size:18px;
+			    	font-size: 16px;
 			    	font-weight: 400;
 			    	text-transform: uppercase;
 			    	letter-spacing: 0.15em;
@@ -29,6 +29,7 @@
 			    	font-size: 20px;
 			    	font-weight: 500;
 			    	letter-spacing: none;
+			    	text-align: left;
 		    	}
 			}
 			.article-cta {
