--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
@@ -18,21 +18,22 @@
 			background-color: rgba(0,0,0,0.8);
 			border-bottom: 8px solid #ffffff;
 			h3 {
-				font-size: 20px;
+				font-size: 19px;
 				font-weight: 500;
 				padding: 20px 0px;
 				margin: 0px;
 			}
 			h2 {
 				font-size: 30px;
-				font-weight: 800;
+				font-weight: 700;
 				margin: 0px;
 			}
 			h4 {
 				font-weight: 400;
-				font-size: 18px;
+				font-size: 14px;
 				margin: 0px;
 				padding: 20px 0px;
+				line-height: 1.5em;
 			}
 		}
 		.description-tab {
