adds style refinments to newsroom footer. replaces footer svg image with new specified informal logo image. adds compiled files

--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-footer.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-footer.scss
@@ -15,7 +15,7 @@ footer {
 		}
 		ul {
 			list-style-type: none;
-			padding-top: 30px;
+			// padding-top: 30px;
 			padding-left: 0px;
 			padding-right: 50px;
 			li {
@@ -28,7 +28,8 @@ footer {
 			}
 		}
 		img {
-			width: auto;
+			width: 100%;
+			max-width: 300px;
 		}
 		.icon-links {
 			padding-top: 50px;
