adds styles for sidebar elements in the newsroom detail page.adds markup to newsroom-detail page for sidebar elements. adds compiled files

--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
@@ -112,7 +112,7 @@ nav {
 		margin-top: 120px;
 		margin-bottom: 0px;
 		.form-control {
-			width: 13vw;
+			width: 250px;
 			height: 50px;
 			border: none;
 			border-radius: 0px;
