--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-detail.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-detail.scss
@@ -15,4 +15,54 @@
 	img {
 		width: 100%;
 	}
+	.newsroom-sidebar {
+		h3 {
+			color: #d11242;
+			text-transform: uppercase;
+			margin: 0;
+			padding: 15px 0px;
+			letter-spacing: 0.15em;
+			border-bottom: 6px solid #003a6e;
+		}
+		.sidebar-profiles {
+			padding-bottom: 20px;
+			.sidebar-profile {
+				padding-top: 40px;
+				padding-bottom: 25px;
+				border-bottom: 3px solid #eeeeee;
+				&:last-child {
+					border: none;
+				}
+				h4 {
+					margin: 0;
+					padding-bottom: 10px;
+					color: $msu-blue;
+					font-weight: 500;
+					letter-spacing: 0.1em;
+				}
+				p {
+					margin: 0;
+					padding-bottom: 10px;
+					color: #707070;
+					letter-spacing: 0.1em;
+					line-height: 23px;
+				}
+				a {
+					margin: 0;
+					color: #0071b9;
+					&:hover {
+						color: #0071b9;
+					}
+				}
+			}
+			.subscribe {
+				.input-group {
+					width: 100%;
+				}
+				// button {
+				// 	width: 100%;
+				// }
+			}
+		}
+	}
 }
