--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
@@ -34,16 +34,15 @@
 			}
 			.article-cta {
 				float: none;
-				button{
-					font-size: 16px;
-					padding: 20px 16px;
-					margin-top: 20px;
-			        background: $msu-red;
-			        color: #ffffff;
-			        width: 100%;
-			        // max-width: 320px;
-			        font-weight: 700;
-			        border-radius: 0px;
+				button {
+					// font-size: 16px;
+					// padding: 20px 16px;
+					// margin-top: 20px;
+			  //       background: $msu-red;
+			  //       color: #ffffff;
+			  //       width: 100%;
+			  //       font-weight: 700;
+			  //       border-radius: 0px;
 				}
 			}
 		}
