--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-detail.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-detail.scss
@@ -57,11 +57,26 @@
 			}
 			.subscribe {
 				.input-group {
+					padding-top: 20px;
 					width: 100%;
+					input {
+						font-style: italic;
+						font-weight: 500;
+						letter-spacing: 0.1em;
+						text-transform: uppercase;
+						padding: 30px 35px;
+						background: #eeeeee;
+						border: 1px solid #b1b1b1;
+						&::placeholder {
+							color: #555555;
+							// color: #b1b1b1;
+						}
+					}
 				}
-				// button {
-				// 	width: 100%;
-				// }
+				button {
+					width: 100%;
+					letter-spacing: 0.15em;
+				}
 			}
 		}
 	}
