--- a/development/terminalfour/src/sass/newsroomHomepage/object-buttons.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/object-buttons.scss
@@ -1,4 +1,18 @@
 button {
     letter-spacing: 1px;
     text-transform: uppercase;
+    &.newsroom-cta {
+    	font-size: 16px;
+		padding: 20px 16px;
+		margin-top: 20px;
+        background: $msu-red;
+        color: #ffffff;
+        width: 100%;
+        font-weight: 700;
+        border-radius: 0px;
+        &:hover {
+        	background: $msu-red;
+        	color: #ffffff;
+        }
+    }
 }
