--- a/www-root/includes/newsroomHomepageIncludes/newsroomArticleDetail.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomArticleDetail.html
@@ -67,7 +67,7 @@
 								<div class="input-group">
 									<input type="text" class="form-control" placeholder="Enter Email Address">
 								</div>
-								<button class="btn btn-lg btn-default">
+								<button class="btn btn-lg btn-default newsroom-cta">
 									Sign Up for RED
 								</button>
 							</form>
