--- a/www-root/includes/newsroomHomepageIncludes/newsroomArticles.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomArticles.html
@@ -41,7 +41,7 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 article-cta center-block text-center">
-			<button class="btn btn-lg btn-default">Read More Stories</button>
+			<button class="btn btn-lg btn-default newsroom-cta">Read More Stories</button>
 		</div>
 	</div>
 </div>
