adds refinemtns to col size for sidebar elements

--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomArticleDetail.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomArticleDetail.html
@@ -16,30 +16,30 @@
 				<div class="sidebar-profiles" id="experts">
 					<h3 class="text-center">Our Experts</h3>
 					<div class="row sidebar-profile">
-						<div class="col-md-3">
+						<div class="col-xs-3">
 							<img src="http://placehold.it/125x125" alt="expert profile image">
 						</div>
-						<div class="col-md-9">
+						<div class="col-xs-9">
 							<h4>Expert Name</h4>
 							<p>Chair and and Associate Professor of Chemistry</p>
 							<a href="mailto:main@mail.com">professormail@msudenver.edu</a>
 						</div>
 					</div>
 					<div class="row sidebar-profile">
-						<div class="col-md-3">
+						<div class="col-xs-3">
 							<img src="http://placehold.it/125x125" alt="expert profile image">
 						</div>
-						<div class="col-md-9">
+						<div class="col-xs-9">
 							<h4>Expert Name</h4>
 							<p>Chair and and Associate Professor of Chemistry</p>
 							<a href="mailto:main@mail.com">professormail@msudenver.edu</a>
 						</div>
 					</div>
 					<div class="row sidebar-profile">
-						<div class="col-md-3">
+						<div class="col-xs-3">
 							<img src="http://placehold.it/125x125" alt="expert profile image">
 						</div>
-						<div class="col-md-9">
+						<div class="col-xs-9">
 							<h4>Expert Name</h4>
 							<p>Chair and and Associate Professor of Chemistry</p>
 							<a href="mailto:main@mail.com">professormail@msudenver.edu</a>
@@ -49,10 +49,10 @@
 				<div class="sidebar-profiles" id="media-contact">
 					<h3 class="text-center">Media Contact</h3>
 					<div class="row sidebar-profile">
-						<div class="col-md-3">
+						<div class="col-xs-3">
 							<img src="http://placehold.it/125x125" alt="expert profile image">
 						</div>
-						<div class="col-md-9">
+						<div class="col-xs-9">
 							<h4>Contact Name</h4>
 							<p>Chair and and Associate Professor of Chemistry</p>
 							<a href="mailto:main@mail.com">professormail@msudenver.edu</a>
