--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -12207,6 +12207,10 @@ nav.navbar {
   .newsroom-nav-container li {
     padding-right: 30px;
   }
+
+  footer .footer-bottom .container .msu-links {
+    border-right: none;
+  }
 }
 @media only screen and (max-width: 767px) {
   .top-banner {
@@ -12240,6 +12244,45 @@ nav.navbar {
     border: none;
   }
 
+  .newsroom-mobile-container {
+    height: 60px;
+  }
+  .newsroom-mobile-container .navbar-header .navbar-brand img {
+    max-width: 40px;
+  }
+  .newsroom-mobile-container .navbar-collapse {
+    border-top: none;
+    box-shadow: none;
+  }
+  .newsroom-mobile-container .navbar-collapse.collapsing {
+    position: relative;
+    z-index: 10;
+  }
+  .newsroom-mobile-container .navbar-collapse.in {
+    position: relative;
+    z-index: 10;
+  }
+  .newsroom-mobile-container .navbar-collapse .navbar-left {
+    padding-top: 10px;
+  }
+  .newsroom-mobile-container .navbar-collapse .navbar-left li {
+    padding-right: 0px;
+    padding-left: 15px;
+  }
+  .newsroom-mobile-container .navbar-form {
+    border-top: none;
+    border-bottom: none;
+    margin-right: 0px;
+    margin-left: 0px;
+    box-shadow: none;
+  }
+  .newsroom-mobile-container .navbar-form.navbar-right .input-group {
+    display: block;
+  }
+  .newsroom-mobile-container .navbar-form.navbar-right .input-group .form-control {
+    width: 250px;
+  }
+
   .navbar-nav {
     margin: 0px;
   }
@@ -12263,6 +12306,11 @@ nav.navbar {
   }
 }
 /** specific breakpoint media query being used in Exceptional Case **/
+@media only screen and (max-width: 385px) {
+  .newsroom-mobile-container .navbar-form.navbar-right .input-group .form-control {
+    width: 225px;
+  }
+}
 /** President's page styles **/
 body .president-page, p .president-page {
   color: #434343;
