--- a/www-root/includes/newsroomHomepageIncludes/newsroomFooter.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomFooter.html
@@ -50,21 +50,21 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-md-4 msu-links">
-					<a href="" class="underline-link">MSUDenver.edu</a>
+					<a href="https://msudenver.edu" class="underline-link">msudenver.edu</a>
 				</div>
 				<div class="col-md-4 msu-links">
-					<a href="" class="underline-link">Give to MSU Denver</a>
+					<a href="https://msudenver.edu/visit" class="underline-link">Visit MSU Denver</a>
 				</div>
 				<div class="col-md-4 msu-links" style="border-right: none;">
-					<a href="" class="underline-link">Apply to MSU Denver</a>
+					<a href="https://msudenver.edu/admissions" class="underline-link">Apply to MSU Denver</a>
 				</div>
 			</div>
 			<div class="row ptc text-center">
 				<div class="col-md-12">
-					Metropolitan State University of Denver
+				<a href="https://msudenver.edu">	Metropolitan State University of Denver </a>
 					<br>
 					<span class="links">
-						<a href="">Privacy</a>, <a href="">Terms</a>, and <a href="">Conditions</a>
+						<a href="https://msudenver.edu/privacy">Privacy, Terms, and Conditions</a>
 					</span>
 				</div>
 			</div>
