fixes hero caption positioning to 8 columns and offset by 2

--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomArticles.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomArticles.html
@@ -1,6 +1,6 @@
 <div class="container-fluid article-container">
 	<div class="row">
-		<div class="col-md-12 text-center">
+		<div class="col-md-12">
 			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
 				<img src="http://via.placeholder.com/580x450" alt="Article Image">
 				<h4>Category</h4>
