--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
@@ -17,17 +17,19 @@
 			letter-spacing: 0.15em;
 			background-color: rgba(0,0,0,0.8);
 			border-bottom: 8px solid #ffffff;
+			h2 {
+				font-size: 26px;
+				font-weight: 700;
+				padding: 15px 0px;
+				// margin: 0px;
+			}
 			h3 {
 				font-size: 19px;
 				font-weight: 500;
-				padding: 20px 0px;
+				padding-bottom: 20px;
 				margin: 0px;
 			}
-			h2 {
-				font-size: 30px;
-				font-weight: 700;
-				margin: 0px;
-			}
+
 			h4 {
 				font-weight: 400;
 				font-size: 14px;
