--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -12700,9 +12700,9 @@ hr.pres-links {
 }
 
 .pres-button-interact {
-  display:  table-cell;
-  vertical-align:  middle;
-  text-align:  center;
+  display: ┬átable-cell;
+  vertical-align: ┬ámiddle;
+  text-align: ┬ácenter;
 }
 
 .president-page .form-group {
