updates hero styles and adds t4 tags to footer and header

--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -23,7 +23,7 @@
       <!-- <ul class="nav navbar-nav">
       </ul> -->
       <ul id="nav-left" class="nav navbar-nav navbar-left">
-        <h3 id="nav-h3"><strong>R</strong>elevant. <strong>E</strong>ssential. <strong>D</strong>enver.</h3>
+        <h3 id="nav-h3"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3>
         <li><a href="#" class="underline-link">All Stories</a></li>
         <li style="padding-right: 0px;"><a href="#" class="underline-link">Trending Topics</a></li>
       </ul>
