--- a/development/terminalfour/src/sass/newsroomHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/responsive-overrides.scss
@@ -2,7 +2,7 @@
 	.newsroom-nav-container {
 		.navbar-left {
 			.navbar-form {
-							
+
 				.form-control {
 
 				}
@@ -29,7 +29,7 @@
 
 }
 
-// tablet screen breakpoint 
+// tablet screen breakpoint
 @media only screen and (max-width: 991px) {
 	.newsroom-nav-container{
 		li {
@@ -151,7 +151,7 @@
 			padding-top: 0px;
 		}
 	}
-	.homepage-hero {
+	.news-hero {
 		.container {
 			top: 0px;
 			margin-bottom: 0px;
