--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomHomepageHero.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomHomepageHero.html
@@ -1,4 +1,4 @@
-<div id="newsroom-hero" class="homepage-hero">
+<div id="newsroom-hero" class="news-hero">
 	<img src="style-assets/media/newsroom-redesign/bradleypayton-insider-0400-ms180208-cc.jpg" alt="Featured Story Image">
 	<div class="container">
 		<div class="row">
