--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
@@ -1,10 +1,13 @@
-.homepage-hero {
+.news-hero {
 	img {
 		width: 100%;
 		// exact height specified on full width image from delivered specs
 		max-height: 1258px;
 		object-fit: cover;
 		object-position: center center;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
 	}
 	.container {
 		text-transform: uppercase;
@@ -16,7 +19,7 @@
 		.hero-tab {
 			letter-spacing: 0.15em;
 			background-color: rgba(0,0,0,0.8);
-			border-bottom: 8px solid #ffffff;
+			padding-bottom: 20px;
 			h2 {
 				font-size: 26px;
 				font-weight: 700;
@@ -24,27 +27,24 @@
 				// margin: 0px;
 			}
 			h3 {
-				font-size: 19px;
-				font-weight: 500;
+				font-weight: 400;
+				font-size: 14px;
 				padding-bottom: 20px;
 				margin: 0px;
 			}
-
-			h4 {
-				font-weight: 400;
-				font-size: 14px;
-				margin: 0px;
-				padding: 20px 0px;
-				line-height: 1.5em;
-			}
+			// h4 {
+			// 	margin: 0px;
+			// 	padding: 20px 0px;
+			// 	line-height: 1.5em;
+			// }
 		}
-		.description-tab {
-			background-color: $msu-blue;
-			p {
-				padding: 40px 0px;
-				font-weight: 700;
-				margin-bottom: 0px;
-			}
-		}
+		// .description-tab {
+		// 	background-color: $msu-blue;
+		// 	p {
+		// 		padding: 40px 0px;
+		// 		font-weight: 700;
+		// 		margin-bottom: 0px;
+		// 	}
+		// }
 	}
 }
