--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -13,8 +13,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="#" class="navbar-brand">
-        <img id="newsroom-logo" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo" width="140px">
+      <a href="/" class="navbar-brand">
+        <img id="newsroom-logo" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo">
       </a>
     </div>
 
@@ -24,8 +24,8 @@
       </ul> -->
       <ul id="nav-left" class="nav navbar-nav navbar-left">
         <h3 id="nav-h3"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3>
-        <li><a href="#" class="underline-link">All Stories</a></li>
-        <li style="padding-right: 0px;"><a href="#" class="underline-link">Trending Topics</a></li>
+        <li><a href="/all-stories" class="underline-link">All Stories</a></li>
+        <li style="padding-right: 0px;"><a href="/topics" class="underline-link">Trending Topics</a></li>
       </ul>
       <form id="nav-right" class="navbar-form navbar-right">
         <div class="input-group">
