--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
@@ -98,20 +98,20 @@ nav {
 }
 
 .newsroom-nav-container{
-	font-weight: 700;
-	background: url("./../media/newsroom-redesign/red-header-background.png");
-	background-size:cover;
+		font-weight: 700;
+		background: url("./../media/newsroom-redesign/red-header-background.png");
+		background-size:cover;
   	background-position:center;
   	// background-color: rgba(209, 18, 66, 1);
-  	height: 215px;
+  	height: 190px;
   	.navbar-header {
-  		width: 170px;
+  		width: 150px;
   		position: relative;
   		z-index: 1;
   		.navbar-brand {
   			width: 100%;
   			img {
-  				width: 150px;
+  				width: 130px;
   				padding-top: 15px;
   			}
   		}
@@ -123,7 +123,8 @@ nav {
 			text-transform: uppercase;
 			margin: 0;
 			padding-top: 30px;
-			padding-bottom: 40px;
+			padding-bottom: 20px;
+			font-size: 25px;
 		}
 		padding-top: 22px;
 		padding-bottom: 22px;
@@ -153,7 +154,7 @@ nav {
 		margin-top: 100px;
 		margin-bottom: 0px;
 		.form-control {
-			width: 250px;
+			width: 200px;
 			height: 50px;
 			border: none;
 			border-radius: 0px;
