--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
@@ -8,7 +8,7 @@
 				img {
 					width: 100%;
 				    height: 100%;
-				    max-height: 450px;
+				    height: 250px;
 				    object-fit: cover;
 				    object-position: center center;
 				}
