--- a/www-root/style-assets/css/newsroom-style.css
+++ b/www-root/style-assets/css/newsroom-style.css
@@ -7666,7 +7666,7 @@ nav.navbar {
 .container-fluid.article-container .row .article-item img {
   width: 100%;
   height: 100%;
-  max-height: 450px;
+  height: 250px;
   object-fit: cover;
   object-position: center center;
 }
